--- a/src/main/resources/static/css/listas/lista.css
+++ b/src/main/resources/static/css/listas/lista.css
@@ -22,7 +22,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #9d73eb;
+    background-color: #011969;
     color: white;
   }
   .id {
