--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -9,6 +9,19 @@
 	<!-- JQuery -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+		<link
+		href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+		rel="stylesheet"
+	  />
+	  <!-- JQuery -->
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+   
+	  <link
+		href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css"
+		rel="stylesheet"
+	  />
+  
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 	<title>Nova Pergunta</title>
 </head>
 
@@ -40,11 +53,26 @@
 				<label for="floatingInput">Digite a Nova Pergunta</label>
 			</div>
 
+		
 			
+				<div class="mb-3">
+					<label>Atrelar em uma pesquisa especifica ?</label>
+					<select
+					  name="perguntaExclusao"
+					  class="select2 form-control"
+					  id="idSelect2"
+					  multiple
+					
+					>
+					<option th:each="p:${pesq}" th:text="${p.turma}" th:value="${p.id}"></option>
+					</select>
+				  </div>
+				</select>
+			 
 
 			<div class="d-grid gap-2" >
 				<button type="submit" class="btn btn-outline-primary">Cadastrar</button>
-				<span ><div th:replace="fragments/mensagem" ></div></span>	
+
 			</div>
 
 
@@ -54,11 +82,13 @@
 
 
 	
-
+	<script src="../../js/selects/select.js"></script>
 	<!--Bootstrap-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
 		crossorigin="anonymous"></script>
+		<link href="path/to/select2.min.css" rel="stylesheet" />
+<script src="path/to/select2.min.js"></script>
 
 
 </body>
