--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -1,41 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<title>Listar Respotas</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Listar Respotas</title>
+  </head>
+  <body>
+    <br />
+    <table border="2" style="padding: 5px">
+      <thead>
+        <th>Id Resposta</th>
+        <th>Nivel Importancia</th>
+        <th>Pergunta</th>
+        <th>Satisfacao</th>
+        <th>Comentario</th>
+        <th>Comentario Geral</th>
+      </thead>
 
-	<br>
-	<table border="2" style="padding: 5px;">
-		<thead>
-			<th>Id Resposta</th>
-			<th>Nivel Importancia</th>
-			<th>Pergunta</th>
-			<th>Satisfacao</th>
-			<th>Comentario</th>
-			<th>Comentario Geral</th>
-		</thead>
-
-		<tbody>
-			<tr th:each="it:${pesq.listaItem}">
-				<td th:text="${it.resposta.id}" />
-				<td th:text="${it.nivelImportancia}" />
-				<td th:text="${it.pergunta.textoPergunta}" />
-				<td th:text="${it.satisfacao}" />
-				<td th:text="${it.comentario}" />
-				<td th:text="${it.resposta.comentarioGeral}" />
-			</tr>
-
-		</tbody>
-
-
-	</table>
-
-
-
-
-
-
-</body>
+      <tbody>
+        <tr th:each="it:${pesq.listaItem}">
+          <td th:text="${it.resposta.id}" />
+          <td th:text="${it.nivelImportancia}" />
+          <td th:text="${it.pergunta.textoPergunta}" />
+          <td th:text="${it.satisfacao}" />
+          <td th:text="${it.comentario}" />
+          <td th:text="${it.resposta.comentarioGeral}" />
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
