--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -52,7 +52,7 @@
 				<th class="id">Id</th>
 				<th class="th-height">Curso</th>
 				<th class="th-height">Turma</th>
-				<th class="th-height">Data Vencimento</th>
+				<th class="th-height">Vencimento</th>
 				<th class="th-height">Jusitificativa</th>
 				
 				<th class="">Respostas</th>
