--- a/src/main/resources/templates/pesquisa/mediaecomentario.html
+++ b/src/main/resources/templates/pesquisa/mediaecomentario.html
@@ -9,42 +9,42 @@
 <br>
 <table border="2" style="padding: 5px;">
     <thead>
+    <th>Id Resposta</th>
     <th>Pergunta</th>
-    <th>Satisfacao</th>
-    <th>Comentario</th>
-    <th>Comentario Geral</th>
+    <th>Media de Satisfacao</th>
     </thead>
 
     <tbody>
-    <tr th:if="${pesq.listaItem.empty}">
-        <td colspan="2"> No Books Available </td>
-    </tr>
-    <tr th:each="it:${pesq.listaItem}">
-        <td th:text="${it.pergunta.textoPergunta}" />
-        <td th:text="${it.satisfacao}" />
-        <td th:text="${it.comentario}" />
-        <td th:text="${it.resposta.comentarioGeral}" />
-    </tr>
+    <th:block th:each="li:${pesq.listaResposta}">
+        <tr>
+            <td th:text="${li.id}"/>
+        <tr th:each="it:${li.listaItem}">
+            <td>------------------------</td>
+            <td th:text="${it.pergunta.textoPergunta}"/>
+            <td th:text="${it.satisfacao}"/>
+        </tr>
+        </tr>
+
+    </th:block>
 
     </tbody>
 
-
 </table>
 
-<table border="2" style="padding: 5px;">
-    <thead>
-    <th>Pergunta</th>
-    </thead>
+<!--<table border="2" style="padding: 5px;">-->
+<!--    <thead>-->
+<!--    <th>Pergunta</th>-->
+<!--    </thead>-->
 
-    <tbody>
-    <tr th:each="p:${perg}">
-        <td th:text="${p.textoPergunta}" />
-    </tr>
+<!--    <tbody>-->
+<!--    <tr th:each="p:${perg}">-->
+<!--        <td th:text="${p.textoPergunta}" />-->
+<!--    </tr>-->
 
-    </tbody>
+<!--    </tbody>-->
 
 
-</table>
+<!--</table>-->
 
 
 
