--- a/src/main/resources/templates/pesquisa/mediaecomentario.html
+++ b/src/main/resources/templates/pesquisa/mediaecomentario.html
@@ -6,7 +6,34 @@
 </head>
 <body>
 
+<table class="striped">
+    <thead>
+    <th>Curso</th>
+    <th>Turma</th>
+    </thead>
+
+    <tbody>
+    <tr>
+        <td th:text="${pesq.curso.descCurso}"/>
+        <td th:text="${pesq.turma}"/>
+    </tr>
+
+    <table border="2" style="padding: 5px;">
+        <thead>
+        <th>Pergunta</th>
+        <th>Média por Pergunta</th>
+        </thead>
+
+        <tbody>
+            <tr th:each="p:${perg}">
+                <td th:text="${p.textoPergunta}"></td>
+            </tr>
+        </tbody>
+
+    </table>
+
 <br>
+<h1>COMENTÁRIOS</h1>
 <table border="2" style="padding: 5px;">
     <thead>
     <th>Id Resposta</th>
@@ -24,7 +51,6 @@
             <td th:text="${it.pergunta.textoPergunta}"/>
             <td th:text="${it.comentario}"/>
             <td><a th:href="@{#}">Solicitar Justificativa</a></td>
-
     </tr>
         </tr>
 
@@ -33,26 +59,6 @@
     </tbody>
 
 </table>
-
-<!--<table border="2" style="padding: 5px;">-->
-<!--    <thead>-->
-<!--    <th>Pergunta</th>-->
-<!--    </thead>-->
-
-<!--    <tbody>-->
-<!--    <tr th:each="p:${perg}">-->
-<!--        <td th:text="${p.textoPergunta}" />-->
-<!--    </tr>-->
-
-<!--    </tbody>-->
-
-
-<!--</table>-->
-
-
-
-
-
 
 </body>
 </html>
