--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -21,30 +21,35 @@
 
 
 		
-	<nav class="navbar navbar-dark bg-dark fixed-top">
-		<div class="container-fluid">
-		  <a class="navbar-brand" href="#">Lista de Pesquisa</a>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-			<span class="navbar-toggler-icon"></span>Menu
-		  </button>
-		  <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-			<div class="offcanvas-header">
-			  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Pesquise</h5>
-			  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-			</div>
-	
-			  <form  class="d-flex form-pesquisa" role="search">
-				<input  class="form-control me-2" type="search" name="id"  aria-label="Search" id="input-busca">
-				<button class="btn btn-outline-success" type="submit">Pesquisar</button>
-			</form>
+		<nav class="navbar navbar-dark bg-dark fixed-top">
+		  <div class="container-fluid">
+			<a class="navbar-brand" href="#">Lista da Pesquisa</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+			  <div class="offcanvas-header">
+				<form action="/pesquisa/buscar">
+					<input type="search" name="id" placeholder="buscar por id">
+					<button type="submit">Buscar</button>
+				</form>
+			  </div>          
+			  </div>
+			  
 			</div>
 		  </div>
-		</div>
-	  </nav>
+		</nav>
 		
 		<h1>Lista da Pesquisa</h1>
 
-		
+			
+		<ul class="dropdown-menu"></ul>
+		<form action="/pesquisa/buscar">
+			<input type="search" name="id" placeholder="buscar por id">
+			<button type="submit">Buscar</button>
+		</form>
+
 	<table id="customers">
 		<thead>
 			<tr>
@@ -52,7 +57,7 @@
 				<th class="id">Id</th>
 				<th class="th-height">Curso</th>
 				<th class="th-height">Turma</th>
-				<th class="th-height">Vencimento</th>
+				<th class="th-height">Data Vencimento</th>
 				<th class="th-height">Jusitificativa</th>
 				
 				<th class="">Respostas</th>
@@ -63,14 +68,13 @@
 			<tr th:each="ps:${pesq}">
 
 				<td th:text="${ps.id}"></td>
-				<td th:text="${ps.curso.descCurso}"/>
+				<td th:text="${ps.curso}"/>
 				<td th:text="${ps.turma}"/>
 				<td th:text="${ps.dataVencimento}"/>
 				<td th:text="${ps.justificativa}"/>
-                
 				<td><a th:href="@{/pesquisa/listarResposta(id=${ps.id})}">Lista de Respostas</a></td>
 
-	</tr>
+			</tr>
 
 		</tbody>
 	</table>
