--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -1,46 +1,98 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
-<head>
-	<meta charset="utf-8">
-	<title>Listar Respotas</title>
-</head>
-<body>
+<html lang="en" xmlns:th="http://thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../img/favicon-16x16.png"
+    />
 
-<br>
-<table border="2" style="padding: 5px;">
-	<thead>
-	<th>Id Resposta</th>
-	<th>Pergunta</th>
-	<th>Satisfacao</th>
-	<th>Nivel Importancia</th>
-	</thead>
+    <link rel="stylesheet" href="../../css/listas/lista.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
 
-	<tbody>
-	<!--		<tr th:each="it:${pesq.listaItem}">-->
-	<!--			<td th:text="${it.resposta.id}" />-->
-	<!--			<td th:text="${it.nivelImportancia}" />-->
-	<!--			<td th:text="${it.pergunta.textoPergunta}" />-->
-	<!--			<td th:text="${it.satisfacao}" />-->
-	<!--			<td th:text="${it.comentario}" />-->
-	<!--			<td th:text="${it.resposta.comentarioGeral}" />-->
-	<!--		</tr>-->
-	<th:block th:each="li:${pesq.listaResposta}">
-		<tr>
-			<td th:text="${li.id}"/>
-		<tr th:each="it:${li.listaItem}">
-			<td>------------------------</td>
-			<td th:text="${it.pergunta.textoPergunta}"/>
-			<td th:text="${it.satisfacao}"/>
-			<td th:text="${it.nivelImportancia}"/>
-		</tr>
-		</tr>
+    <title>Lista Pesquisa</title>
+  </head>
+  <body>
+    <h1>Lista de Respostas</h1>
 
-	</th:block>
+    <button type="button" onclick="Mudarestado('minhaDiv')">
+      Mostrar / Esconder
+    </button>
 
-	</tbody>
-
-</table>
+    <form action="itemresposta/buscaResp">
+      <select onChange="myFunction(this.value)" >
+        <option
+          th:each="li:${pesq.listaResposta}"
+          th:value="${li.id}"
+          th:text="${li.id}"
+        ></option>
+      </select>
+    </form>
+    
 
 
-</body>
+    <div id="minhaDiv">
+      <table id="customers">
+        <thead>
+          <th>Id Resposta</th>
+          <th>Pergunta</th>
+          <th>Satisfacao</th>
+          <th>Nivel Importancia</th>
+        </thead>
+
+        <tbody>
+          <th:block th:each="li:${pesq.listaResposta}">
+            <tr>
+              <td th:text="${li.id}" />
+              <tr th:each="it:${li.listaItem}">
+                <td></td>
+                <td th:text="${it.pergunta.textoPergunta}" />
+                <td th:text="${it.satisfacao}" />
+                <td th:text="${it.nivelImportancia}" />
+              </tr>
+            </tr>
+          </th:block>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="../../js/liresp.js"></script>
+    <script src="../../js/selects/select-resposta.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
