--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -45,9 +45,9 @@
   <body>
     <h1>Lista de Respostas</h1>
 
-    <button type="button" onclick="Mudarestado('minhaDiv')">
+  <!--  <button type="button" onclick="Mudarestado('minhaDiv')">
       Mostrar / Esconder
-    </button>
+    </button> -->
 
     <form action="itemresposta/buscaResp">
       <input id="demo" type="text" name="search" placeholder="Search...">
@@ -88,7 +88,9 @@
 
     <!-- JavaScript Bundle with Popper -->
     <script src="../../js/liresp.js"></script>
-    <script src="../../js/selects/select-resposta.js"></script>
+    <!--
+      <script src="../../js/selects/select-resposta.js"></script>
+     -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
