--- a/src/main/resources/templates/pesquisa/mediaecomentario.html
+++ b/src/main/resources/templates/pesquisa/mediaecomentario.html
@@ -21,7 +21,7 @@
     <table border="2" style="padding: 5px;">
         <thead>
         <th>Pergunta</th>
-        <th>Média por Pergunta</th>
+        <th>Média de Satisfacao por Pergunta</th>
         </thead>
 
         <tbody>
