--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -49,14 +49,14 @@
 
 			<div class="form-floating mb-3">
 				<input type="text" class="form-control" id="floatingInput" placeholder="Nova Pergunta"
-					name="textoPergunta" th:value="${p?.textoPergunta}" />
+					name="textoPergunta" th:value="${p?.textoPergunta}" required/>
 				<label for="floatingInput">Digite a Nova Pergunta</label>
 			</div>
 
 		
 			
 				<div class="mb-3">
-					<label>Atrelar em uma pesquisa especifica ?</label>
+					<label>Deseja atrelar em uma pesquisa especifica(opcional)?</label>
 					<select
 					  name="perguntaExclusao"
 					  class="select2 form-control"
@@ -64,15 +64,16 @@
 					  multiple
 					
 					>
-					<option th:each="p:${pesq}" th:text="${p.turma}" th:value="${p.id}"></option>
+					<option th:each="p:${pesq}" th:text="${p?.turma}" th:value="${p?.id}"></option>
 					</select>
 				  </div>
-				</select>
+				
 			 
 
 			<div class="d-grid gap-2" >
-				<button type="submit" class="btn btn-outline-primary">Cadastrar</button>
-
+			<div style="text-align:center!important;">
+				<button type="submit" class="btn btn-outline-primary" style="width: 120px" >Cadastrar</button>
+			</div>
 			</div>
 
 
@@ -87,7 +88,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
 		crossorigin="anonymous"></script>
-		<link href="path/to/select2.min.css" rel="stylesheet" />
+		<link href="path/to/select2.min.css" rel="stylesheet"/>
 <script src="path/to/select2.min.js"></script>
 
 
@@ -97,6 +98,7 @@
 	select {
 		width: 100%;
 	}
+
 </style>
 
 </html>
