--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -1,16 +1,46 @@
-body {
-    background: #ABCDEF;
-    font-family: Assistant, sans-serif;
-    display: flex;
-    min-height: 90vh;
-  }
+
+  body {
+    margin: 0px;
+	align-items: center;
+	background-color: var(--white);
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: grid;
+	height: 100vh;
+	place-items: center;
+  background-color: #eee;
+  background-image: url("https://images7.alphacoders.com/938/thumb-1920-938300.jpg");
+    background: 
+      -webkit-linear-gradient(to right, #B993D6, #8CA6DB);
+
+}
+.container-login100::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #005bea;
+  background: -webkit-linear-gradient(bottom,#005bea,#00c6fb);
+  background: -o-linear-gradient(bottom,#005bea,#00c6fb);
+  background: -moz-linear-gradient(bottom,#005bea,#00c6fb);
+  background: linear-gradient(bottom,#005bea,#00c6fb);
+  opacity: .9;
+}
+
   .login {
     color: white;
-    background: #136a8a;
-    background: 
+    background: ##CBD3EB;
+    /* background: 
       -webkit-linear-gradient(to right, #267871, #136a8a);
-    background: 
-      linear-gradient(to right, #267871, #136a8a);
+    background-color: #e3efe8; */
+    background-color: rgb(203, 211, 235  / 225, 14%, 86%);
+
     margin: auto;
     box-shadow: 
       0px 2px 10px rgba(0,0,0,0.2), 
@@ -18,6 +48,7 @@ body {
       0px 30px 60px 1px rgba(0,0,0,0.5);
     border-radius: 8px;
     padding: 50px;
+    
   }
   .login .head {
     display: flex;
@@ -25,18 +56,18 @@ body {
     justify-content: space-between;
   }
    .img {
-    max-width:200px;
-    max-height:150px;
+    max-width:300px;
+    max-height:210px;
     width: auto;
     height: auto;
     align-items: center;
-    padding-left: 15%;
 }
   .login .head .company {
     font-size: 2.2em;
   }
   .login .msg {
     text-align: center;
+    font-size: 1.2em;
   }
   .login .form input[type=text].text {
     border: none;
@@ -68,14 +99,16 @@ body {
     background: none;
     text-decoration: none;
     color: white;
-    border-radius: 3px;
-    padding: 5px 2em;
+    padding: 10px 10em;
     transition: 0.5s;
+    border-radius: 10px;
   }
   .login .form .btn-login:hover {
     background: white;
     color: dimgray;
     transition: 0.5s;
+    
+    
   }
   .login .form .forgot {
     background: none;
@@ -89,4 +122,29 @@ body {
     background: white;
     color: dimgray;
     transition: 0.5s;
+    
   }
+
+
+.alert .close-btn{
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #ffd080;
+  padding: 20px 18px;
+  cursor: pointer;
+  
+}
+
+.close-btn:hover{
+  background: #ffd766;
+  
+
+}
+.close-btn .fa-times{
+  color: #ce8500;
+  font-size: 22px;
+  line-height: 40px;
+
+}
