--- a/src/main/resources/templates/resposta/codigoPesquisa.html
+++ b/src/main/resources/templates/resposta/codigoPesquisa.html
@@ -15,7 +15,7 @@
                 
                 <div class="inbt">
                     <h2>Digite o código do formulário</h2>
-                    <input type="number" name="id"  value=""> 
+                    <input type="number" name="id"  value="" style="text-align:center">
                     
                     <button class="bt">
                         <a  type="submit">Buscar</a>
