atualizao telas iniciais

--- a/src/main/resources/templates/telainicial/telaInicialDiretor.html
+++ b/src/main/resources/templates/telainicial/telaInicialDiretor.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Início Diretor</title>
+<title>Início Secretaria</title>
 </head>
 
 <body>
@@ -10,9 +10,9 @@
 	<nav>
 	<a href="/logout"><i class="material-icons right" style="font-size: 20px">exit_to_app</i></a>
 	</nav>
-
 <div>
-		  <a href="/cadastro" style="margin: 0 40px 0 60px" >Cadastrar Usuario</a>
+		  
+			<a href="/cadastro" style="margin: 0 40px 0 60px" >Cadastrar Usuario</a>
 			
 			<a href=" /lista/1" style="margin: 0 40px 0 60px" >Listar Usuario</a>
 			
@@ -25,13 +25,14 @@
 			<a href="/pergunta/cadastrar" style="margin: 0 40px 0 60px">Cadastrar Nova Pergunta</a>
 			
 			<a href="/pergunta/listar" style="margin: 0 40px 0 60px">Listar Perguntas</a>
+
+			<a href="/pesquisa/cadastrar" style="margin: 0 40px 0 60px">Cadastrar Pesquisa</a>
 			
 			<a href="/pesquisa/listar" style="margin: 0 40px 0 60px">Listar Pesquisa</a>
-			
-			<a href="/resposta/formulario" style="margin: 0 40px 0 60px">Formulario</a>		
-			
-			<a href="#" style="margin: 0 40px 0 60px" >Gerar Relatório</a>	
-</div>
 
+			<a href="/resposta/codigoPesquisa" style="margin: 0 40px 0 60px">Formulario</a>		
+			
+			<a href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9" style="margin: 0 40px 0 60px" >Gerar Relatório</a>	
+		</div>
 </body>
 </html>
