--- a/src/main/resources/templates/telainicial/telaInicialSecretaria.html
+++ b/src/main/resources/templates/telainicial/telaInicialSecretaria.html
@@ -25,12 +25,14 @@
 			<a href="/pergunta/cadastrar" style="margin: 0 40px 0 60px">Cadastrar Nova Pergunta</a>
 			
 			<a href="/pergunta/listar" style="margin: 0 40px 0 60px">Listar Perguntas</a>
+
+			<a href="/pesquisa/cadastrar" style="margin: 0 40px 0 60px">Cadastrar Pesquisa</a>
 			
 			<a href="/pesquisa/listar" style="margin: 0 40px 0 60px">Listar Pesquisa</a>
+
+			<a href="/resposta/codigoPesquisa" style="margin: 0 40px 0 60px">Formulario</a>		
 			
-			<a href="/resposta/formulario" style="margin: 0 40px 0 60px">Formulario</a>		
-			
-			<a href="#" style="margin: 0 40px 0 60px" >Gerar Relatório</a>	
+			<a href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9" style="margin: 0 40px 0 60px" >Gerar Relatório</a>	
 		</div>
 </body>
 </html>
