atualizacao telas iniciais

--- a/src/main/resources/templates/telainicial/telaInicialDocencia.html
+++ b/src/main/resources/templates/telainicial/telaInicialDocencia.html
@@ -13,7 +13,7 @@
 
 	<a href="/pesquisa/listar" style="margin: 0 40px 0 60px">Listar Pesquisa</a>
 			
-	<a href="/resposta/formulario" style="margin: 0 40px 0 60px">Formulario</a>	
+	<a href="/resposta/codigoPesquisa" style="margin: 0 40px 0 60px">Formulario</a>
 	
 	<a href="#" style="margin: 0 40px 0 60px" >Justificar</a>
 </body>
