--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -32,6 +32,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <link rel="stylesheet" href="../../css/sections.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -45,77 +46,35 @@
   <body>
     <h1>Lista de Respostas</h1>
 
-    <!--  <button type="button" onclick="Mudarestado('minhaDiv')">
-      Mostrar / Esconder
-    </button> -->
-
     <form action="pesquisarid" class="search-res" method="post">
-      <input
-        id="demo"
-        placeholder="Search..."
-        name="idpesquisa"
-      />
-      <input type="submit" value="Buscar">
+      <input id="demo" placeholder="Search..." name="idpesquisa" />
+      <input type="submit" value="Buscar" />
     </form>
-    <!--
-     <div>
-      <div>
-        <label>ID da Resposta</label>
-        <input th:value="$">
-        
-        </tr>
-      </div>
-      <div>
-        <label>Satisfação</label>
-        <label>Perguntas</label>
-        <label>Nivel de Importancia</label>
-      </div>
-      <div>
-        <table>
-          <tbody>
-            <th:block>
-            <tr>
-              <td th:text="${li.id}" class="trid" />
-              <tr th:each="it:${li.listaItem}">
-                <td></td>
-                <td th:text="${it.pergunta.textoPergunta}" />
-                <td th:text="${it.satisfacao}" />
-                <td th:text="${it.nivelImportancia}" />
-              </tr>
-            </tr>
-          </th:block>
-          </tbody>
-        </table>
-      </div>
-    </div>
-   -->
 
-    <div id="minhaDiv">
-      <table id="customers">
-        <thead>
-          <th>Id Resposta</th>
-          <th>Pergunta</th>
-          <th>Satisfacao</th>
-          <th>Nivel Importancia</th>
-        </thead>
+  
+    <section>
+      <h2>Clique no numero da resposta para exibir</h2>
 
-        <tbody id="list">
-          <th:block th:each="li:${pesq.listaResposta}">
-		<tr>
-			<td th:text="${li.id}"/>
-		<tr th:each="it:${li.listaItem}">
-			<td>------------------------</td>
-			<td th:text="${it.pergunta.textoPergunta}"/>
-			<td th:text="${it.satisfacao}"/>
-			<td th:text="${it.nivelImportancia}"/>
-		</tr>
-		</tr>
+      <details th:each="li:${pesq.listaResposta}" >
+        <summary th:text="${li.id}"></summary>
+        <div id="minhaDiv">
+          <table th:each="it:${li.listaItem}" id="customers">
+            <thead>
+              <th>Pergunta</th>
+              <th>Satisfacao</th>
+              <th>Nivel Importancia</th>
+            </thead>
+            <tbody>
+              <td th:text="${it.pergunta.textoPergunta}"></td>
+              <td th:text="${it.satisfacao}"></td>
+              <td th:text="${it.nivelImportancia}"></td>
+            </tbody>
+          </table>
+        </div>
+      </details>
+    </section>
 
-	</th:block>
 
-        </tbody>
-      </table>
-    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="../../js/liresp.js"></script>
