--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -19,38 +19,31 @@
 </head>
 <body>
 
-
-		
-		<nav class="navbar navbar-dark bg-dark fixed-top">
-		  <div class="container-fluid">
-			<a class="navbar-brand" href="#">Lista da Pesquisa</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-			  <span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-			  <div class="offcanvas-header">
-				<h5 class="offcanvas-title" id="offcanvasNavbarLabel">Pesquisar</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-			  </div>          
-			  </div>
-			  
+	<nav class="navbar navbar-dark bg-dark fixed-top">
+		<div class="container-fluid">
+		  <a class="navbar-brand" href="#">Lista de Pesquisa</a>
+		  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+			<span class="navbar-toggler-icon"></span>Menu
+		  </button>
+		  <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+			<div class="offcanvas-header">
+			  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Pesquise</h5>
+			  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 			</div>
-		  </div>
-		</nav>
-		
-		<h1>Lista da Pesquisa</h1>
-
-		<div class="dropend">
-			<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-			  Pesquise
-			</button>
-			
-		<ul class="dropdown-menu"></ul>
-			<form  class="d-flex form-pesquisa" role="search">
+	
+			  <form  class="d-flex form-pesquisa" role="search">
 				<input  class="form-control me-2" type="search" name="id"  aria-label="Search" id="input-busca">
 				<button class="btn btn-outline-success" type="submit">Pesquisar</button>
 			</form>
+			</div>
+		  </div>
+		</div>
+	  </nav>
+		
+		
+		<h1>Lista da Pesquisa</h1>
+
+
 
 	<table id="customers">
 		<thead>
@@ -61,8 +54,7 @@
 				<th class="th-height">Turma</th>
 				<th class="th-height">Data Vencimento</th>
 				<th class="th-height">Jusitificativa</th>
-				<th class="">Alterar</th>
-				<th class="">Excluir</th>
+ 
 				<th class="">Respostas</th>
 			</tr>
 		</thead>
@@ -75,13 +67,8 @@
 				<td th:text="${ps.turma}"/>
 				<td th:text="${ps.dataVencimento}"/>
 				<td th:text="${ps.justificativa}"/>
-                <td><a th:href="@{#}">
-					<span class="material-symbols-outlined">
-					  settings </span> </a></td>
-				<td><a th:href="@{#}">
-					<span class="material-symbols-outlined">
-					delete</span></a></td>
-				<td><a th:href="@{#}">Lista de Respostas</a></td>
+                 
+				<td><a th:href="@{/pesquisa/listarResposta(id=${ps.id})}">Lista de Respostas</a></td>
 
 	</tr>
 
