--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -14,7 +14,7 @@
       <p class="msg">Bem vindo de volta</p>
 
       <div class="form">
-        <form>
+        <form action="login">
           <input
             type="text"
             placeholder="NIF"
@@ -27,7 +27,7 @@
             placeholder="••••••••••••••"
             class="password"
           />
-          <a href="#" class="btn-login" id="do-login">Login</a>
+          <button type="submit"/>
         </form>
       </div>
     </section>
