--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -39,7 +39,7 @@
             id="senha"
           /><br />
 
-          <button class="btn-login"> Logar </button>
+          <button class="btn-login" type="submit"> Logar </button>
 
 
            
