--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -24,7 +24,7 @@
     <p class="msg">Bem vindo de volta</p>
 
     <div class="form">
-        <form action="save">
+        <form action="login">
             <input
                     type="text"
                     placeholder="NIF"
@@ -39,6 +39,7 @@
                     class="password"
                     id="senha"
                     name="senha"
+                    required
             /><br/>
 
             <button class="btn-login" type="submit"> Logar</button>
