--- a/src/main/resources/templates/cadastro/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastro/cadastroUsuario.html
@@ -63,7 +63,7 @@
           </select>
 
           <div class="btnCad">
-            <button>
+            <button type="submit">
               <b>CADASTRAR</b>
             </button>
           </div>
