--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -52,13 +52,13 @@
         <details th:each="li:${pesq.listaResposta}" id="minhaDiv" open>
           <summary th:text="${li.id}"></summary>
           <div id="">
-          <table id="customers" th:each="it:${li.listaItem}">
+          <table class="table" th:each="it:${li.listaItem}">
             <thead>
               <th>Pergunta</th>
               <th>Satisfacao</th>
               <th>Nivel Importancia</th>
             </thead>
-            <tbody >
+            <tbody class="table-group-divider">
               <td th:text="${it.pergunta.textoPergunta}"></td>
               <td th:text="${it.satisfacao}"></td>
               <td th:text="${it.nivelImportancia}"></td>
