lista de pesquisa por docente ok

--- a/src/main/resources/templates/telainicial/telaInicialDocencia.html
+++ b/src/main/resources/templates/telainicial/telaInicialDocencia.html
@@ -18,6 +18,16 @@
 	<title>Lista Pesquisa</title>
 </head>
 <body>
+<nav>
+	<a href="/logout"><i class="material-icons right" style="font-size: 20px">exit_to_app</i></a>
+</nav>
+
+<a href="/pesquisa/listar" style="margin: 0 40px 0 60px">Listar Pesquisa</a>
+
+<a href="/resposta/codigoPesquisa" style="margin: 0 40px 0 60px">Formulario</a>
+
+
+<a href="#" style="margin: 0 40px 0 60px" >Justificar</a>
 
 <h1>Lista da Pesquisa</h1>
 
