"mudança de css nos cadastros"

--- a/src/main/resources/templates/pergunta/cadPergunta.html
+++ b/src/main/resources/templates/pergunta/cadPergunta.html
@@ -50,8 +50,8 @@
 
 			<div class="mb-3">
 				<label class="lb-legend">Digite a Nova Pergunta</label>
-				<input type="text" class="form-control"
-					name="textoPergunta" th:value="${p?.textoPergunta}" required/>
+				<input type="text" class="form-control ipt-pergunta"
+					name="textoPergunta" th:value="${p?.textoPergunta}" required />
 				
 			</div>
 
