--- a/src/main/resources/templates/cadastro/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastro/cadastroUsuario.html
@@ -3,57 +3,89 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <!-- Favicon -->
     <link
-      href="../../css/cadastro-users/cad-users.css"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../img/favicon-16x16.png"
+    />
+    <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
     />
     <!-- Compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <title>Página de Cadastro</title>
+
+    <title>Cadastro de Usuários</title>
   </head>
   <body>
-    <div class="header">
-      <div class="inner-header flex container">
-        <form action="save" method="post" class="cadForm col s12">
-          <h4>Cadastro de Usuários</h4>
-          <input type="hidden" name="userId" th:value="${users?.userId}" />
+    <div class="area">
+      <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    <div class="container main-div">
+      <form action="save" method="post" class="cadForm col s12">
+        <h4>Cadastro de Usuários</h4>
+        <input type="hidden" name="userId" th:value="${users?.userId}" />
 
+        <div class="mb-3">
+          <label class="form-label">Nome:</label>
           <input
             type="text"
             name="nome"
-            placeholder="Nome"
             th:value="${users?.nome}"
-            class="validate"
+            class="form-control"
             required
           />
-
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Nif:</label>
           <input
             type="text"
             name="nif"
-            placeholder="Nif"
             th:value="${users?.nif}"
-            class="validate"
+            class="form-control"
             required
           />
-
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Senha:</label>
           <input
             type="password"
             name="senha"
-            placeholder="Senha"
             th:value="${users?.senha}"
-            class="validate"
+            class="form-control"
             required
-        	
           />
-			
-          <select name="tipo" id="" class="browser-default" required>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Qual o Acesso da Pessoa ?</label>
+          <select name="tipo" class="form-select" required>
             <option value="" disabled selected>Selecione uma Opção:</option>
             <option
               th:each="tipo : ${T(br.com.projeto.sistemadeavaliacao.model.TipoUsuario).values()}"
@@ -62,61 +94,17 @@
               th:selected="${tipo.toString() == r?.tipo?.toString()}"
             ></option>
           </select>
+        </div>
 
-          <div class="btnCad">
-            <button type="submit">
-              <b>CADASTRAR</b>
-            </button>
-          </div>
-        </form>
-      </div>
-
-      <!--Início das ondas-->
-
-      <div>
-        <svg
-          class="waves"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          viewBox="0 24 150 28"
-          preserveAspectRatio="none"
-          shape-rendering="auto"
-        >
-          <defs>
-            <path
-              id="gentle-wave"
-              d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
-            />
-          </defs>
-          <g class="parallax">
-            <use
-              xlink:href="#gentle-wave"
-              x="48"
-              y="0"
-              fill="rgba(156,94,144,0.46)"
-            />
-            <use
-              xlink:href="#gentle-wave"
-              x="48"
-              y="3"
-              fill="rgba(150,70,144,0.46)"
-            />
-            <use
-              xlink:href="#gentle-wave"
-              x="48"
-              y="5"
-              fill="rgba(134,44,144,0.46)"
-            />
-            <use xlink:href="#gentle-wave" x="48" y="7" fill="#651890" />
-          </g>
-        </svg>
-      </div>
+        <div class="mb-3">
+          <button type="submit" class="btn btn-primary btnCad">Cadastrar</button>
+        </div>
+      </form>
     </div>
-	
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../../js/alerts/mensagem.js"></script>
-    <!-- JavaScript Bundle with Popper -->
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
